--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          fetch-depth: 2
       - name: Build Front-End
         run: make build-front-end
       - name: Copy Front-End
@@ -37,7 +37,7 @@ jobs:
           filecount=$(git diff HEAD^ --shortstat "**.html" "**.scss" "**.js" | awk '{print $1}')
           echo "::set-output name=matching-files::${filecount:-0}"
       - name: Run Percy
-        if: steps.front-end-changes.outputs.any_modified == 'true'
+        if: steps.front-end-changes.outputs.matching-files != '0'
         run: npx @percy/cli snapshot --verbose ./Tests/AppTests/__Snapshots__/WebpageSnapshotTests
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
