Better name for the Yarn package now we can’t use upper case.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swiftpackageindex",
+  "name": "swift-package-index",
   "license": "Apache-2.0",
   "repository": "git@github.com:SwiftPackageIndex/SwiftPackageIndex-Server.git",
   "scripts": {
