Added prettier to the Yarn package.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "esbuild": "^0.14.21",
     "esbuild-sass-plugin": "^2.2.3",
+    "prettier": "^2.7.1",
     "stylelint": "^14.9.1",
     "stylelint-config-standard-scss": "^5.0.0",
     "stylelint-order": "^5.0.0",
