--- a/.spi.yml
+++ b/.spi.yml
@@ -5,7 +5,7 @@ builder:
     scheme: Run
   - platform: linux
     swift_version: '5.5'
-    image: spi-images:basic-5.5-latest
+    image: registry.gitlab.com/finestructure/spi-images:basic-5.5-latest
   - platform: linux
     swift_version: '5.6'
-    image: spi-images:basic-5.6-latest
+    image: registry.gitlab.com/finestructure/spi-images:basic-5.6-latest
