--- a/.github/workflows/query-performance.yml
+++ b/.github/workflows/query-performance.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     container:
-      image: registry.gitlab.com/finestructure/spi-base:0.7.1
+      image: registry.gitlab.com/finestructure/spi-base:02ffeabd701ea48f35cd1634ef6450c232aa214a
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
