--- a/app.yml
+++ b/app.yml
@@ -23,6 +23,7 @@ x-shared: &shared
     ALLOW_TWITTER_POSTS: ${ALLOW_TWITTER_POSTS}
     AWS_DOCS_BUCKET: ${AWS_DOCS_BUCKET}
     BUILD_TRIGGER_DOWNSCALING: ${BUILD_TRIGGER_DOWNSCALING}
+    BUILD_TRIGGER_LATEST_SWIFT_VERSION_DOWNSCALING: ${BUILD_TRIGGER_LATEST_SWIFT_VERSION_DOWNSCALING}
     BUILD_TRIGGER_LIMIT: ${BUILD_TRIGGER_LIMIT}
     BUILD_TRIGGER_SLEEP: ${BUILD_TRIGGER_SLEEP}
     BUILDER_TOKEN: ${BUILDER_TOKEN}
