--- a/infrastructure/loki.yml
+++ b/infrastructure/loki.yml
@@ -59,6 +59,7 @@ compactor:
 limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 168h
+  split_queries_by_interval: 24h
 
 chunk_store_config:
   max_look_back_period: 168h
