--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,10 +44,7 @@ jobs:
       - name: Install unzip
         run: apt-get update && apt-get install -y unzip
       - name: Run tests
-        # temporarily run without TSAN due to false positives on Linux
-        # https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server/pull/1496
-        # Review with Swift 5.6
-        run: cp .env.testing.template .env.testing && make test-without-tsan
+        run: cp .env.testing.template .env.testing && make test
         env:
           COLLECTION_SIGNING_PRIVATE_KEY: ${{ secrets.COLLECTION_SIGNING_PRIVATE_KEY }}
           DATABASE_HOST: postgres
