Fix JSON trailing comma warning.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
     "name": "spi-base",
     "build": { "dockerfile": "Dockerfile" },
     "extensions": [
-      "sswg.swift-lang",
+      "sswg.swift-lang"
     ],
     "settings": {
       "lldb.library": "/usr/lib/liblldb.so"
