Wire through BUILD_TRIGGER_ALLOW_LIST env variable

--- a/app.yml
+++ b/app.yml
@@ -22,6 +22,7 @@ x-shared: &shared
     ALLOW_BUILD_TRIGGERS: ${ALLOW_BUILD_TRIGGERS}
     ALLOW_TWITTER_POSTS: ${ALLOW_TWITTER_POSTS}
     AWS_DOCS_BUCKET: ${AWS_DOCS_BUCKET}
+    BUILD_TRIGGER_ALLOW_LIST: ${BUILD_TRIGGER_ALLOW_LIST}
     BUILD_TRIGGER_DOWNSCALING: ${BUILD_TRIGGER_DOWNSCALING}
     BUILD_TRIGGER_LATEST_SWIFT_VERSION_DOWNSCALING: ${BUILD_TRIGGER_LATEST_SWIFT_VERSION_DOWNSCALING}
     BUILD_TRIGGER_LIMIT: ${BUILD_TRIGGER_LIMIT}
