Wire through MASTODON_ACCESS_TOKEN

--- a/app.yml
+++ b/app.yml
@@ -43,6 +43,7 @@ x-shared: &shared
     GITLAB_PIPELINE_TOKEN: ${GITLAB_PIPELINE_TOKEN}
     HIDE_STAGING_BANNER: ${HIDE_STAGING_BANNER}
     LOG_LEVEL: ${LOG_LEVEL}
+    MASTODON_ACCESS_TOKEN: ${MASTODON_ACCESS_TOKEN}
     METRICS_PUSHGATEWAY_URL: ${METRICS_PUSHGATEWAY_URL}
     ROLLBAR_TOKEN: ${ROLLBAR_TOKEN}
     SITE_URL: ${SITE_URL}
