--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -174,8 +174,8 @@ deploy prod: # PROD: auto-deploy tags
 
 deploy dev: # DEV: auto-deploy main
   rules:
-    - if: '$ENV == "dev" && $CI_COMMIT_BRANCH == "main"'
-    - if: '$ENV == "dev" && $CI_COMMIT_TAG != null'
+    - if: '$ENV == "dev" && $CI_PIPELINE_SOURCE != "schedule" && $CI_COMMIT_BRANCH == "main"'
+    - if: '$ENV == "dev" && $CI_PIPELINE_SOURCE != "schedule" && $CI_COMMIT_TAG != null'
   tags:
     - spi-d1
   <<: *deploy-common
@@ -205,7 +205,9 @@ smoke-test:
 
 doc-test:
   rules:
-    - if: '$ENV == "prod" && $CI_PIPELINE_SOURCE == "schedule"'
+    - if: $ENV == "prod" && $CI_PIPELINE_SOURCE == "schedule"
+    - if: $ENV == "dev"
+      when: manual
   stage: smoke-test
   tags:
     - spi-server-deploy
