--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -205,6 +205,7 @@ smoke-test:
 
 doc-test:
   rules:
+    - if: $ENV == "prod" && $CI_COMMIT_TAG != null
     - if: $ENV == "prod" && $CI_PIPELINE_SOURCE == "schedule"
   stage: smoke-test
   tags:
