--- a/app.yml
+++ b/app.yml
@@ -45,7 +45,7 @@ x-shared: &shared
     LOG_LEVEL: ${LOG_LEVEL}
     MASTODON_ACCESS_TOKEN: ${MASTODON_ACCESS_TOKEN}
     METRICS_PUSHGATEWAY_URL: ${METRICS_PUSHGATEWAY_URL}
-    PLAUSIBLE_SITE_ID: ${PLAUSIBLE_SITE_ID}
+    PLAUSIBLE_API_REPORTING_SITE_ID: ${PLAUSIBLE_API_REPORTING_SITE_ID}
     SITE_URL: ${SITE_URL}
     TWITTER_API_KEY: ${TWITTER_API_KEY}
     TWITTER_API_SECRET: ${TWITTER_API_SECRET}
