Update Percy action.

--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -47,6 +47,11 @@ jobs:
           echo "::set-output name=matching-files::${filecount:-0}"
       - name: Run Percy
         if: steps.front-end-changes.outputs.matching-files != '0'
-        run: npx @percy/cli snapshot --verbose ./Tests/AppTests/__Snapshots__/WebpageSnapshotTests
+        run: |
+          npm install -g @percy/cli
+          echo "=== Installed Percy Version ==="
+          npx percy --version
+          echo "=== Running Snapshots ==="
+          npx percy snapshot ./Tests/AppTests/__Snapshots__/WebpageSnapshotTests
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
