--- a/app.yml
+++ b/app.yml
@@ -23,6 +23,7 @@ x-shared: &shared
     ALLOW_TWITTER_POSTS: ${ALLOW_TWITTER_POSTS}
     AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
     AWS_DOCS_BUCKET: ${AWS_DOCS_BUCKET}
+    AWS_README_BUCKET: ${AWS_README_BUCKET}
     AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
     BUILD_TRIGGER_ALLOW_LIST: ${BUILD_TRIGGER_ALLOW_LIST}
     BUILD_TRIGGER_DOWNSCALING: ${BUILD_TRIGGER_DOWNSCALING}
