--- a/.github/workflows/query-performance.yml
+++ b/.github/workflows/query-performance.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     container:
-      image: registry.gitlab.com/finestructure/spi-base:0.13.0
+      image: registry.gitlab.com/finestructure/spi-base:8df01a36500693b0d28f3806e01a0ccdd3ced27a
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
