Add ANALYZE_LIMIT, ANALYZE_SLEEP env variables

--- a/app.yml
+++ b/app.yml
@@ -21,6 +21,8 @@ x-shared: &shared
     # docker-compose reads and uses to populate variables
     ALLOW_BUILD_TRIGGERS: ${ALLOW_BUILD_TRIGGERS}
     ALLOW_TWITTER_POSTS: ${ALLOW_TWITTER_POSTS}
+    ANALYZE_LIMIT: ${ANALYZE_LIMIT}
+    ANALYZE_SLEEP: ${ANALYZE_SLEEP}
     API_SIGNING_KEY: ${API_SIGNING_KEY}
     AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
     AWS_DOCS_BUCKET: ${AWS_DOCS_BUCKET}
