Settings for auto-formatting and linting in VS Code.

--- a/.vscode/settings.json.template
+++ b/.vscode/settings.json.template
@@ -1,3 +1,13 @@
 {
     "task.allowAutomaticTasks": "on",
+    "stylelint.packageManager": "yarn",
+    "stylelint.validate": ["css", "scss", "less", "postcss"],
+    "[javascript][json][jsonc][typescript][typescriptreact][html][yaml][md][scss][css]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "editor.codeActionsOnSave": {
+        "source.fixAll": false,
+        "source.fixAll.stylelint": true
+    }
 }
