--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+      time: "02:00"
     groups:
       dependencies:
         patterns:
@@ -13,6 +14,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+      time: "02:00"
     groups:
       dependencies:
         patterns:
@@ -21,6 +23,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+      time: "02:00"
     groups:
       dependencies:
         patterns:
