--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,15 +10,15 @@ updates:
       dependencies:
         patterns:
           - "*"
-  - package-ecosystem: "swift"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-      time: "02:00"
-    groups:
-      dependencies:
-        patterns:
-          - "*"
+  # - package-ecosystem: "swift"
+  #   directory: "/"
+  #   schedule:
+  #     interval: "weekly"
+  #     time: "02:00"
+  #   groups:
+  #     dependencies:
+  #       patterns:
+  #         - "*"
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
