--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Run Percy
         if: steps.front-end-changes.outputs.matching-files != '0'
         run: |
-          npm install -g @percy/cli@1.27.4
+          npm install -g @percy/cli
           echo "=== Installed Percy Version ==="
           npx percy --version
           echo "=== Running Snapshots ==="
