Pass through SWIFT_BACKTRACE env variable

--- a/app.yml
+++ b/app.yml
@@ -53,6 +53,7 @@ x-shared: &shared
     METRICS_PUSHGATEWAY_URL: ${METRICS_PUSHGATEWAY_URL}
     PLAUSIBLE_BACKEND_REPORTING_SITE_ID: ${PLAUSIBLE_BACKEND_REPORTING_SITE_ID}
     SITE_URL: ${SITE_URL}
+    SWIFT_BACKTRACE: ${SWIFT_BACKTRACE}
     TWITTER_API_KEY: ${TWITTER_API_KEY}
     TWITTER_API_SECRET: ${TWITTER_API_SECRET}
     TWITTER_ACCESS_TOKEN_KEY: ${TWITTER_ACCESS_TOKEN_KEY}
