--- a/Resources/Blog/posts.yml
+++ b/Resources/Blog/posts.yml
@@ -165,11 +165,11 @@
   published: true
 - slug: revealing-and-explaining-package-scores
   title: Revealing and explaining package scores
-  summary: When you search the Swift Package Index, the order in which the search results are displayed is determined by a combination of the relevance of text in the package name and description, and an internal score based on various metrics. Today, we’re adding a feature that
+  summary: When you search the Swift Package Index, the order in which the search results are displayed is determined by a combination of the relevance of text in the package name and description, and an internal score based on various metrics. Today, we’re adding a feature to make those scores public and transparent.
   published_at: 2023-10-31
   published: true
 - slug: highlighting-package-funding-links
   title: Highlighting package funding links
-  summary: Are services like GitHub Sponsors, Open Collective, Patreon, and Ko-fi the best way to fund open-source software development? They may not be a perfect solution, but they are the best “one size fits all” solution we have, so let’s highlight them
+  summary: Are services like GitHub Sponsors, Open Collective, Patreon, and Ko-fi the best way to fund open-source software development? They may not be a perfect solution, but they are the best “one size fits all” solution we have, so let’s highlight them.
   published_at: 2024-01-18
   published: true
