--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "@hotwired/stimulus": "^3.2.1",
         "@hotwired/turbo": "^7.3.0",
+        "highlight.js": "^11.9.0",
         "normalize.css": "^8.0.1"
     },
     "devDependencies": {
