Pass through BUILD_TIMEOUT, rename from DEFAULT_BUILD_TIMEOUT

--- a/app.yml
+++ b/app.yml
@@ -28,6 +28,7 @@ x-shared: &shared
     AWS_DOCS_BUCKET: ${AWS_DOCS_BUCKET}
     AWS_README_BUCKET: ${AWS_README_BUCKET}
     AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+    BUILD_TIMEOUT: ${BUILD_TIMEOUT}
     BUILD_TRIGGER_ALLOW_LIST: ${BUILD_TRIGGER_ALLOW_LIST}
     BUILD_TRIGGER_DOWNSCALING: ${BUILD_TRIGGER_DOWNSCALING}
     BUILD_TRIGGER_LATEST_SWIFT_VERSION_DOWNSCALING: ${BUILD_TRIGGER_LATEST_SWIFT_VERSION_DOWNSCALING}
