Pin Turbo to 7.x.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -53,3 +53,7 @@ updates:
       dependencies:
         patterns:
           - "*"
+    ignore:
+      - dependency-name: '@hotwired/turbo'
+        versions: ['^8.0.0']
+          
