--- a/.github/workflows/query-performance.yml
+++ b/.github/workflows/query-performance.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     container:
-      image: registry.gitlab.com/finestructure/spi-base:2f3137ef5e78a32642a79962dbe01c4628be9857
+      image: registry.gitlab.com/finestructure/spi-base:0.15.0
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
