--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     container:
-      image: registry.gitlab.com/finestructure/spi-base:0.15.1
+      image: registry.gitlab.com/finestructure/spi-base:a80f5bbf4bfa962cf725dcce7f80609a7847e59b
     services:
       postgres:
         image: postgres:13.11-alpine
